--- a/style.css
+++ b/style.css
@@ -65,7 +65,9 @@ footer {
   margin-left: auto;
   margin-right: auto;
   width: 800px;
-
+  align-content: center; 
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 
@@ -112,20 +114,19 @@ p {
 
 }
 
-li, ul {
+ul {
   align-content: center; 
-font-family: Times, "Times New Roman", Georgia, serif;
-color: rgb(0, 0, 0);
-text-align: left;
-padding-left: 5%;
-padding-right: auto;
-font-size: medium;
-}
-
-ol {
-  text-decoration: underline;
+  font-family: Times, "Times New Roman", Georgia, serif;
+  color: rgb(0, 0, 0);
+  text-align: left;
   padding-left: 5%;
   padding-right: auto;
   font-size: medium;
-  padding-left: 250px;
+}
+
+ol {
+  padding-left: 300px;
+  text-decoration: underline;
+  padding-right: auto;
+  font-size: medium;
 }
