--- a/style.css
+++ b/style.css
@@ -66,8 +66,6 @@ footer {
   margin-right: auto;
   width: 800px;
   align-content: center; 
-  padding-top: 2%;
-  padding-bottom: 2%;
 }
 
 
@@ -126,6 +124,7 @@ ul {
 
 ol {
   padding-left: 300px;
+  text-align: left;
   text-decoration: underline;
   padding-right: auto;
   font-size: medium;
