--- a/style.css
+++ b/style.css
@@ -4,6 +4,58 @@ html {
   
 }
 
+header {
+  background-color:#2b2b2b;
+  margin-bottom: 40px;
+}
+
+header h1 {
+  color: #fff;
+  text-align: center;
+  padding-top: 20px;
+  margin: 0;
+  font-size: 48px;
+}
+
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
+header nav ul {
+  display:flex;
+  padding-left: 0;
+  list-style: none;
+}
+
+header nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 20px 0 0;
+}
+
+header nav ul li:last-child a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0;
+}
+
+@media all and (min-width: 600px) {
+  header {
+      display: flex;
+      justify-content: space-between;
+      padding: 0 30px;
+      background-color: #0B1C51;
+  }
+  header h1 {
+      padding-top: 0;
+      margin: 8px;
+      font-size: 52px;
+  }
+
+
+}
+
 
 /* i added a border to seperate titles and sections of the protfolio */
 hr {
@@ -22,23 +74,10 @@ padding-left: 250px;
 /* article used for my contact List*/
 
 article {
-  width: 800px;
   padding: auto;
   text-align: center;
   margin: auto;
   }
-
-
-/* The Header will only contain my Name and Title */
-
-header {
-  background-color: rgb(164, 181, 236);
-  width: 800px;
-  display: table;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 /* All Links Should be centered and Black */
 
@@ -46,12 +85,6 @@ a{
 font-size: 18px;
 text-align: center;
 color: rgb(0, 0, 0);
-}
-
-/* Pseudo code that will change the color of the Links when it has been visited */
-
-a:visited {
-  color: #921313;
 }
 
 /* Pseudo code so that there will be a color change  when the Links are hovered over */
@@ -63,14 +96,11 @@ a:hover {
 }
 
 body {
-width: 800px;
-margin: 50px;
+margin: 0px;
 display: table;
 text-align: center;
 margin-left: auto;
 margin-right: auto;
-background-color: rgb(247, 247, 184);
-
 }
 
 footer {
@@ -86,7 +116,7 @@ footer {
 img {
   display: block;
   margin: 0 auto;
-width: 50%;
+width: 300px;
 padding-top: 75px;
 align-items: center;
 position: static;
@@ -126,14 +156,16 @@ p {
 
 /* Used for the list of my Hobbies */
 
-ul {
+.hobbies {
+  display: flex;
+  flex-direction: column;
   align-content: center; 
   font-family: Times, "Times New Roman", Georgia, serif;
   color: rgb(0, 0, 0);
   text-align: left;
-  padding-left: 5%;
   padding-right: auto;
   font-size: medium;
+  list-style: none;
 }
 
 /* Used for my Contacts Section */
@@ -144,4 +176,7 @@ ol {
   text-decoration: underline;
   padding-right: auto;
   font-size: medium;
+  list-style: none;
 }
+
+
